--- a/index.html
+++ b/index.html
@@ -4,8 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/png" href="https://blueberrydatastorage.blob.core.windows.net/adminpanel/ExtraImages/gsl5swxg.u3c.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <style>
+
+
+.background {
+  position: relative;      
+  height: 100vh;         
+  width: 100vw;      
+  background-image: url('bgimage.png'); 
+  background-size: cover;  
+  background-position: center; 
+  background-repeat: no-repeat; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.overlay {
+  position: absolute;      
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+.download-content{
+  position: relative;     
+  z-index: 1;              
+
+}
+.first-heading-h1{
+    color: navy;
+    font-size: 60px;
+
+}
+.mobile-image img{
+    height: 100%;
+    width: 100%;
+}
+.download-p-tag{
+    font-size: 20px;
+    font-weight: 500;
+}
+.image-button img {
+    width:72%;
+  
+  }
+
+    </style>
 </head>
 <body>
-    
+    <div class="background">
+        <div class="overlay"></div>
+  
+        <div class="download-content d-flex">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 ">
+                        <h1 class="first-heading-h1">Download now and start exploring</h1>
+                        <p class="download-p-tag"> Consequuntur, reprehenderit eligendi quasi quaerat velit tenetur quo consequatur incidunt quam esse?</p>
+                        <!-- <div class="row">
+                            <div class="col-md-6">
+                                <a href="https://example.com" class="image-button">
+                                    <img src="app-store.svg" alt="Click me" />
+                                  </a>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="https://example.com" class="image-button">
+                                    <img src="google-play.svg" alt="Click me" />
+                                  </a>
+                            </div>
+                        </div> -->
+
+                        <div class="d-flex">
+                            <a href="https://example.com" class="image-button pe-0">
+                                <img src="app-store.svg" alt="Click me" />
+                              </a>
+                              <a href="https://example.com" class="image-button">
+                                <img src="google-play.svg" alt="Click me" />
+                              </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mobile-image">
+                        <img src="mobileimage.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
 </body>
 </html>
