--- a/index.html
+++ b/index.html
@@ -4,44 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" type="image/png" href="https://blueberrydatastorage.blob.core.windows.net/adminpanel/ExtraImages/gsl5swxg.u3c.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <style>
 
 
-.background {
-  position: relative;      
+.background {   
   height: 100vh;         
   width: 100vw;      
   background-image: url('bgimage.png'); 
   background-size: cover;  
   background-position: center; 
   background-repeat: no-repeat; 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+ }
 
 
 .overlay {
-  position: absolute;      
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   background-color: rgba(255, 255, 255, 0.9);
 }
 
-.download-content{
-  position: relative;     
+.download-content{ 
   z-index: 1;              
-
 }
 .first-heading-h1{
-    color: navy;
-    font-size: 60px;
-
+    color: #0D47A2;
+    font-size: 63px;
 }
 .mobile-image img{
     height: 100%;
@@ -52,45 +39,86 @@
     font-weight: 500;
 }
 .image-button img {
-    width:72%;
-  
-  }
+    width: 28%;
+}
 
+
+@media (max-width: 1024px){
+    .first-heading-h1{
+    font-size: 53px;
+}
+.download-p-tag{
+    font-size: 16px;
+}
+}
+@media (max-width: 768px){
+    .first-heading-h1 {
+        font-size: 69px;
+        text-align: center;
+    }
+    .download-p-tag {
+        font-size: 23px;
+        text-align: center;
+    }
+.mobile-image img {
+    height: 99%;
+    width: 42%;
+}
+
+}
+@media (max-width: 600px){
+    .download-p-tag {
+        font-size: 13px;
+    }
+    .first-heading-h1 {
+        font-size: 41px;
+    }
+    .image-button img {
+        width: 35%;
+    }
+    .mobile-image img {
+        height: 99%;
+        width: 74%;
+    }
+}
+@media (min-width: 315px) and (max-width: 375px){
+    .first-heading-h1 {
+        font-size: 36px;
+    }
+    .download-p-tag {
+        font-size: 10px;
+    }
+    .mobile-image img {
+        height: 99%;
+        width: 99%;
+    }
+
+}
     </style>
 </head>
 <body>
-    <div class="background">
-        <div class="overlay"></div>
+    <div class="background position-relative d-flex justify-content-center align-items-center">
+        <div class="overlay position-absolute top-0 start-0 end-0 bottom-0"></div>
   
-        <div class="download-content d-flex">
+        <div class="download-content d-flex position-relative">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 ">
-                        <h1 class="first-heading-h1">Download now and start exploring</h1>
-                        <p class="download-p-tag"> Consequuntur, reprehenderit eligendi quasi quaerat velit tenetur quo consequatur incidunt quam esse?</p>
-                        <!-- <div class="row">
-                            <div class="col-md-6">
-                                <a href="https://example.com" class="image-button">
-                                    <img src="app-store.svg" alt="Click me" />
-                                  </a>
-                            </div>
-                            <div class="col-md-6">
-                                <a href="https://example.com" class="image-button">
-                                    <img src="google-play.svg" alt="Click me" />
-                                  </a>
-                            </div>
-                        </div> -->
-
-                        <div class="d-flex">
-                            <a href="https://example.com" class="image-button pe-0">
+                    <div class="col-lg-6 col-md-12 col-12 d-flex justify-content-center align-items-center flex-column">
+                        <h1 class="first-heading-h1 ms-xxl-5">Download now & start exploring</h1>
+                        <p class="download-p-tag mt-2">Get all your bookings and travel packages on one plateform.
+                            <br>Download the app now !
+                        </p>
+        
+                        <div class="ms-xxl-5 mt-2 text-center text-md-center text-lg-start">
+                            <a href="https://apps.apple.com/app/next-holidays-india/id6504800054" class="image-button pe-0">
                                 <img src="app-store.svg" alt="Click me" />
-                              </a>
-                              <a href="https://example.com" class="image-button">
+                            </a>
+                            <a href="https://play.google.com/store/apps/details?id=com.nextholidaysIndia.app" class="image-button">
                                 <img src="google-play.svg" alt="Click me" />
-                              </a>
+                            </a>
                         </div>
                     </div>
-                    <div class="col-md-6 mobile-image">
+                    <div class="col-lg-6 col-md-12 col-12 mobile-image d-flex justify-content-center justify-content-lg-start ">
                         <img src="mobileimage.png" alt="">
                     </div>
                 </div>
